--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">ChessMate</string>
+    <string name="app_name">Chess Mate</string>
+    <string name="button_new_game">New Game</string>
+    <string name="button_statistics">Statistics</string>
+    <string name="button_settings">Settings</string>
 </resources>
